==> davewhiiite/uvc/firmware/uvc_controller/mbed-os/features/netsocket/emac-drivers/TARGET_GD_EMAC/gd32xx_emac.cpp <==
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "mbed_shared_queues.h"
#include "netsocket/nsapi_types.h"
#include "gd32xx_emac.h"
#define _ENET_FLAG_RX                       (1)
#define _THREAD_STACKSIZE                   (512)
#define _THREAD_PRIORITY                    (osPriorityHigh)
#define _PHY_TASK_PERIOD                    (200ms)
#define _ENET_HW_ADDR_SIZE                  (6)
#define _ENET_MTU_SIZE                      (1500)
#define _ENET_IF_NAME                       "gd"
#define _ENET_BOARD_PHY_ADDRESS             (0x01)
#define _ENET_HARDWARE_CHECKSUM             (0)
#define _GD_MAC_ADDR0                       0x02
#define _GD_MAC_ADDR1                       0xaa
#define _GD_MAC_ADDR2                       0xbb
#define _GD32_ID_ADDR                       0x1FFFF7E8

void GD32_EMAC::thread_function(void *pvParameters)
{
    static struct GD32_EMAC *gd32_enet = static_cast<GD32_EMAC *>(pvParameters);

    while (1) {
        uint32_t flags = osThreadFlagsWait(_ENET_FLAG_RX, osFlagsWaitAny, osWaitForever);

        if (flags & _ENET_FLAG_RX) {
            gd32_enet->packet_rx();
        }
    }
}

void mbed_mac_address(char *mac)
{
    uint32_t unique_id;

    unique_id = *(uint32_t *)_GD32_ID_ADDR;
    mac[0] = _GD_MAC_ADDR0;
    mac[1] = _GD_MAC_ADDR1;
    mac[2] = _GD_MAC_ADDR2;
    mac[3] = (unique_id & 0x00ff0000) >> 16;
    mac[4] = (unique_id & 0x0000ff00) >> 8;
    mac[5] = (unique_id & 0x000000ff);
}

bool GD32_EMAC::power_up()
{
    /* Initialize the hardware */
    if (true != low_level_init()) {
        return false;
    }

    /* Worker thread */
    rx_thread = create_new_thread("gd32_emac_thread", &GD32_EMAC::thread_function, this, _THREAD_STACKSIZE, _THREAD_PRIORITY, &rx_thread_cb);

    phy_task_handle = mbed::mbed_event_queue()->call_every(_PHY_TASK_PERIOD, mbed::callback(this, &GD32_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    eth_arch_enable_interrupts();

    return true;
}

uint32_t GD32_EMAC::get_mtu_size() const
{
    return _ENET_MTU_SIZE;
}

void GD32_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, _ENET_IF_NAME, (size < sizeof(_ENET_IF_NAME)) ? size : sizeof(_ENET_IF_NAME));
}

uint8_t GD32_EMAC::get_hwaddr_size() const
{
    return _ENET_HW_ADDR_SIZE;
}
